# kiid

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/config/: config.h
src/executor/: app.h  executor.h
src/window/: kiid_screen.h  kiid_window.h  layout.h  results_view.h  search_box.h
